[package]
name = "maelstrom-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
uuid = { version = "1.11.0", features = ["v4"] }

[features]
lin_kv = []
# Turn on this if you edit rust code in neovim.
# Otherwise, you could not get LSP features in neovim.
# No better method yet. If you know, tell me. Thanks!
# default = ["lin_kv"]

[[bin]]
name = "maelstrom-node"
path = "src/main.rs"

[[bin]]
name = "maelstrom-txn"
path = "src/bin/maelstrom-txn.rs"
required-features = ["lin_kv"]
